// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pull-requests — list row rendering > given a gh command error > renders error state when gh pr list fails 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (0/0)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;255;98;140m Error: Not a GitHub repository[0m           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav[0m                                                                                                                [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given a long PR list > renders scrollable rows with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (20/20)[0m                    [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m #1[0m                                                                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#1[39m feat(ide): add spli… [38;2;76;62;118mfeature/split-p[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  ┌─────────┬────────────────────────────┐                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#2[39m fix(tui): resolve r… [38;2;76;62;118mfix/list-picker[39m[38;2;250;208;0m│[39m[0m  │ [1mField  [22m │ [1mValue                     [22m │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#3[39m refactor(ide): simp… [38;2;76;62;118mrefactor/render[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#4[39m chore: bump version… [38;2;76;62;118mrelease/v0.4.0[39m [38;2;250;208;0m│[39m[0m  │ Author  │ @knoopx                    │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#5[39m docs: update README… [38;2;76;62;118mdocs/install-gu[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#6[39m test(ide): add snap… [38;2;76;62;118mtest/snapshot-t[39m[38;2;250;208;0m│[39m[0m  │ Branch  │ feature/split-panel → main │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#7[39m fix(ide): handle em… [38;2;76;62;118mfix/bookmarks-e[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#8[39m feat(ide): add keyb… [38;2;76;62;118mfeature/file-pr[39m[38;2;250;208;0m│[39m[0m  │ State   │ OPEN                       │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#9[39m perf(ide): optimize… [38;2;76;62;118mperf/file-icons[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#10[39m chore(deps): update… [38;2;76;62;118mchore/deps-upd[39m[38;2;250;208;0m│[39m[0m  │ Review  │ Pending                    │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#11[39m feat(ide): add spli… [38;2;76;62;118mfeature/split-[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#12[39m fix(tui): resolve r… [38;2;76;62;118mfix/list-picke[39m[38;2;250;208;0m│[39m[0m  │ Changes │ +10 / -5                   │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#13[39m refactor(ide): simp… [38;2;76;62;118mrefactor/rende[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#14[39m chore: bump version… [38;2;76;62;118mrelease/v0.4.0[39m[38;2;250;208;0m│[39m[0m  │ Updated │ 15/1/2024                  │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#15[39m docs: update README… [38;2;76;62;118mdocs/install-g[39m[38;2;250;208;0m│[39m[0m  └─────────┴────────────────────────────┘                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#16[39m test(ide): add snap… [38;2;76;62;118mtest/snapshot-[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#17[39m fix(ide): handle em… [38;2;76;62;118mfix/bookmarks-[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#18[39m feat(ide): add keyb… [38;2;76;62;118mfeature/file-p[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#19[39m perf(ide): optimize… [38;2;76;62;118mperf/file-icon[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#20[39m chore(deps): update… [38;2;76;62;118mchore/deps-upd[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+o open  ctrl+c checkout  ctrl+a approve  ctrl+m merge  ctrl+s state  ctrl+i insert[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given a single PR > renders the PR with state icon and metadata 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (1/1)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m #42[0m                                                                       [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#42[39m feat(ide): add spli… [38;2;76;62;118mfeature/split-[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  ┌─────────┬────────────────────────────┐                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ [1mField  [22m │ [1mValue                     [22m │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Author  │ @knoopx                    │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Branch  │ feature/split-panel → main │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ State   │ OPEN                       │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Review  │ Pending                    │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Changes │ +10 / -5                   │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Updated │ 15/1/2024                  │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  └─────────┴────────────────────────────┘                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+o open  ctrl+c checkout  ctrl+a approve  ctrl+m merge  ctrl+s state  ctrl+i insert[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given empty results > renders the no items message 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (0/0)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav[0m                                                                                                                [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given multiple PRs > renders PRs with large change stats 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (2/2)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m #1[0m                                                                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#1[39m feat(ide): integrat… [38;2;76;62;118mfeature/pi-tui-[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  ┌─────────┬───────────────────────────────────┐                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#2[39m fix(tui): resolve t… [38;2;76;62;118mfix/border-typo[39m[38;2;250;208;0m│[39m[0m  │ [1mField  [22m │ [1mValue                            [22m │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Author  │ @knoopx                           │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Branch  │ feature/pi-tui-integration → main │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ State   │ OPEN                              │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Review  │ Pending                           │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Changes │ +1500 / -800                      │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Updated │ 15/1/2024                         │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  └─────────┴───────────────────────────────────┘                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+o open  ctrl+c checkout  ctrl+a approve  ctrl+m merge  ctrl+s state  ctrl+i insert[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given multiple PRs > renders PRs with review decisions 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (3/3)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m #1[0m                                                                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#1[39m [38;2;165;255;144m󰄬[39m feat(ide): add spli… [38;2;76;62;118mfeature/split[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  ┌─────────┬────────────────────────────┐                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#2[39m [38;2;250;208;0m󰌑[39m refactor(ide): simp… [38;2;76;62;118mrefactor/list[39m[38;2;250;208;0m│[39m[0m  │ [1mField  [22m │ [1mValue                     [22m │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#3[39m chore: update depen… [38;2;76;62;118mchore/deps-upda[39m[38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Author  │ @knoopx                    │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Branch  │ feature/split-panel → main │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ State   │ OPEN                       │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Review  │ APPROVED                   │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Changes │ +10 / -5                   │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼────────────────────────────┤                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Updated │ 15/1/2024                  │                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  └─────────┴────────────────────────────┘                                [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+o open  ctrl+c checkout  ctrl+a approve  ctrl+m merge  ctrl+s state  ctrl+i insert[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given multiple PRs > renders all PRs with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (3/3)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m #1[0m                                                                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#1[39m feat(ide): integrat… [38;2;76;62;118mfeature/pi-tui-[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  ┌─────────┬───────────────────────────────────┐                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;250;208;0m󰘬[39m [38;2;250;208;0m#2[39m fix(tui): resolve r… [38;2;76;62;118mfix/list-picker[39m[38;2;250;208;0m│[39m[0m  │ [1mField  [22m │ [1mValue                            [22m │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;255;98;140m󰅖[39m [38;2;255;98;140m#3[39m docs: update README… [38;2;76;62;118mdocs/install-gu[39m[38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Author  │ @knoopx                           │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Branch  │ feature/pi-tui-integration → main │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ State   │ OPEN                              │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Review  │ Pending                           │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Changes │ +10 / -5                          │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼───────────────────────────────────┤                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Updated │ 15/1/2024                         │                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  └─────────┴───────────────────────────────────┘                         [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+o open  ctrl+c checkout  ctrl+a approve  ctrl+m merge  ctrl+s state  ctrl+i insert[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`pull-requests — list row rendering > given multiple PRs > renders draft PRs with draft indicator 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Pull Requests (2/2)[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m #1[0m                                                                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;76;62;118m󰽾[39m [38;2;76;62;118m#1[39m WIP feat(ide): expe… [38;2;76;62;118mwip/virtual-lis[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  ┌─────────┬─────────────────────────┐                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [38;2;165;255;144m󰐊[39m [38;2;165;255;144m#2[39m feat(ide): add spli… [38;2;76;62;118mfeature/split-p[39m[38;2;250;208;0m│[39m[0m  │ [1mField  [22m │ [1mValue                  [22m │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼─────────────────────────┤                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Author  │ @knoopx                 │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼─────────────────────────┤                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Branch  │ wip/virtual-list → main │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼─────────────────────────┤                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ State   │ OPEN (Draft)            │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼─────────────────────────┤                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Review  │ Pending                 │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼─────────────────────────┤                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Changes │ +10 / -5                │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  ├─────────┼─────────────────────────┤                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  │ Updated │ 15/1/2024               │                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  └─────────┴─────────────────────────┘                                   [0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+o open  ctrl+c checkout  ctrl+a approve  ctrl+m merge  ctrl+s state  ctrl+i insert[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
